<resources>
    <string name="app_name">QRCodeScanner</string>

    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="name">Name</string>
    <string name="middle_name">Middle name</string>
    <string name="surname">Surname</string>
    <string name="document_id">Document id</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="register">Register</string>
    <string name="scan">Scan</string>
    <string name="result">Result</string>

    <string name="scanner">Scanner</string>
    <string name="groups">Groups</string>
    <string name="calendar">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
