<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.qrcodescanner.lecturer.ui.home.ScannerFragment"
        android:label="@string/scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.qrcodescanner.lecturer.ui.dashboard.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.qrcodescanner.lecturer.ui.notifications.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>
